[workspace]
members = [ "crates/gc","lib/native"]

[workspace.dependencies]
micro-nom = { path = "vendor//micro-nom" }
unwrap-enum = "=0.1.0"
rand = "0.8.5"

[package]
name = "lisp"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "disasm"

[dependencies]
value = { path = "crates/value" }
reader = { path = "crates/reader" }
compiler = { path = "crates/compiler" }
vm = { path = "crates/vm" }
native-functions = { path = "lib/native" }
gc = { path = "crates/gc" }