[workspace]
members = [ "crates/error", "lib/native"]

[workspace.dependencies]
micro-nom = { path = "vendor//micro-nom" }
unwrap-enum = "=0.1.0"
rand = "0.8.5"
thiserror = "1.0.61"
itertools = "0.13.0"

[package]
name = "lisp"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "disasm"

[[bin]]
name = "check"

[dependencies]
reader = { path = "crates/reader" }
compiler = { path = "crates/compiler" }
vm = { path = "crates/vm" }
native-functions = { path = "lib/native" }
thiserror = { workspace = true }
error = { path = "crates/error" }

[profile.bench]
debug = 1
debuginfo-level = 1